src/test/ui/compare-method/region-extra.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/region-extra.rs:9:24
   |
LL |     fn foo();
   |     --------- definition of `foo` from trait
...
LL |     fn foo() where 'a: 'b { }
   |                        ^^ impl has extra requirement `'a: 'b`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0276`.
